--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bearinmindrabbits",
   "version": "1.0.0",
   "description": "Save the rabbits from the bears that kidnapped them!!",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node api/server.ts"
   },
   "author": "",
   "license": "ISC",
